--- a/simplegame/simplegame.vcxproj
+++ b/simplegame/simplegame.vcxproj
@@ -30,6 +30,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>simplegame</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>dodge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
